Development Version
===================

* Improve data rendering in result list.


Version 0.3.0 (2015-02-06)
==========================

* Add completions for SQL keywords.
* Add completions for tables and columns.
* Add support for MySQL/MariaDB, SQLite3 and Oracle databases.
* Change shortcuts to switch editors to Ctrl+<number>.
* Support for SSH tunnels when opening a connection.
  A shell command is executed in a subprocess. The command
  doesn't accept any input for now.


Version 0.2.0 (2015-02-01)
==========================

* Format SQL statement at cursor (Alt+F).
* Jump to next/previous statement (Alt+Shift+Down, Alt+Shift+Up).
* Passwords are now saved in keyring.


Version 0.1.0 (2015-01-31)
==========================

* Initial version.